# eBistroBackend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.config/: api.dev.env.example  db.dev.env.example
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.extend.yml
src/app/: asgi.py  settings.py  urls.py  wsgi.py
