[tool.poetry]
name = "ebistrobackend"
version = "0.1.0"
description = ""
authors = ["Shovon Basak <shvnbasak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
dev = { path = "/workspace/.venv" }
